--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,24 @@
 {
   "presets": [
     "next/babel"
+  ],
+  "plugins": [
+    [
+      "inline-react-svg",
+      {
+        "svgo": {
+          "plugins": [
+            {
+              "removeAttrs": {
+                "attrs": "(data-name)"
+              }
+            },
+            {
+              "cleanupIDs": true
+            }
+          ]
+        }
+      }
+    ]
   ]
 }
