--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@prismicio/client": "^4.0.0",
+    "@prismicio/client": "^5.1.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "date-fns": "^2.19.0",
     "next": "10.0.7",
+    "next-images": "^1.8.1",
     "prismic-dom": "^2.2.5",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "svg-react-loader": "^0.4.6",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
