--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
+    "@types/js-cookie": "^3.0.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "date-fns": "^2.19.0",
-    "next": "10.0.7",
+    "js-cookie": "^3.0.1",
+    "next": "11",
     "next-images": "^1.8.1",
     "prismic-dom": "^2.2.5",
     "prismic-reactjs": "^1.3.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "svg-react-loader": "^0.4.6",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@prismicio/slice-simulator-react": "^0.1.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/node": "^14.14.31",
@@ -45,8 +48,10 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "next-slicezone": "^0.2.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
+    "slice-machine-ui": "0.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
